# keyhive

./: .gitignore
.github/workflows/: build-drive.yml
keyhive_core/: Cargo.toml
keyhive_core/benches/: bench_ingest.rs  bench_reachable_prekey_ops.rs  bench_reachable_prekey_ops_all.rs
keyhive_core/src/: keyhive.rs
keyhive_core/src/crypto/: signed.rs
keyhive_core/src/crypto/signer/: async_signer.rs  sync_signer.rs
keyhive_core/src/principal/: active.rs  agent.rs  document.rs  group.rs  individual.rs
keyhive_core/src/principal/group/: delegation.rs  membership_operation.rs  revocation.rs  state.rs
keyhive_core/src/principal/individual/: op.rs  state.rs
keyhive_core/src/principal/membered/: id.rs
keyhive_core/src/store/: delegation.rs  revocation.rs
keyhive_core/src/util/: content_addressed_map.rs
keyhive_wasm/: Cargo.toml  package.json
keyhive_wasm/src/js/: agent.rs  encrypted.rs  keyhive.rs
